# Python-API

./: .gitignore  README.md  blendtest.py  data.yml  launch.py  pyproject.toml  requirements.txt  test.blend  test_data.yml  yamltest.yml
.github/workflows/: integration.yml  machine-learning.yml  python-package.yml  release-build.yml
docker/: README.md  docker-compose.yml
docker/machine_learning/download/: Dockerfile  checksums.sha256  download.sh  links.txt
docker/machine_learning/stable_diffusion_webui/: Dockerfile  clone.sh  config.py  dependency.sh  (+2 more)
src/: camera_controller.py  crop_controller.py  launch.py  scene_renderer.py  utils.py
src/controllers/: camera_controller.py  crop_controller.py  crop_controller_old.py  crop_data.csv  ground_controller.py  light_controller.py  nutrient_controller.py  segmentation.py  soil_controller.py  weather_controller.py  yaml_reader.py
src/growth_simulator/: growth_manager.py  test.py
src/machine_learning/: README.md  api.py  connector.py  text_prompt.py  text_prompt_definition.py  text_prompt_manager.py  watcher.py  x2img_config.py
src/objects/: barley.py  object_manager.py  weed.py
src/readers/: yaml_reader.py
src/renderers/: scene_renderer.py
tests/: launch_test_data.yml  test_data.yml  test_deep_learning_training.py  test_launch.py  test_segmentation.py
tests/controllers/: test_camera_controller.py  test_collection_segmentation.py  test_crop_controller.py  test_ground_controller.py  test_light_controller.py  test_segmentation.py
tests/machine_learning/: test_api.py  test_connector.py  test_training.py
(+4 files in other folders)
